// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LangsToLearnSelector 1`] = `
<Styled(ViewNB)>
  <Styled(ViewNB)
    padder={true}
  >
    <Styled(Text)
      style={
        Object {
          "textDecorationLine": "underline",
        }
      }
    >
      Langage to learn
    </Styled(Text)>
  </Styled(ViewNB)>
  <Styled(ViewNB)
    key="spanish"
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Styled(ViewNB)
      key="spanish"
      style={
        Object {
          "width": 262.5,
        }
      }
    >
      <Styled(PickerNB)
        iosIcon={
          <Styled(Icon)
            name="arrow-down"
          />
        }
        mode="dropdown"
        onValueChange={[Function]}
        selectedValue="spanish"
        testID="lang-spanish"
      >
        <Item
          key="arabic"
          label="Arabic"
          value="arabic"
        />
        <Item
          key="basque"
          label="Basque"
          value="basque"
        />
        <Item
          key="bulgarian"
          label="Bulgarian"
          value="bulgarian"
        />
        <Item
          key="catalan"
          label="Catalan"
          value="catalan"
        />
        <Item
          key="chinese"
          label="Chinese"
          value="chinese"
        />
        <Item
          key="croatian"
          label="Croatian"
          value="croatian"
        />
        <Item
          key="czech"
          label="Czech"
          value="czech"
        />
        <Item
          key="danish"
          label="Danish"
          value="danish"
        />
        <Item
          key="dutch"
          label="Dutch"
          value="dutch"
        />
        <Item
          key="english"
          label="English"
          value="english"
        />
        <Item
          key="estonian"
          label="Estonian"
          value="estonian"
        />
        <Item
          key="finnish"
          label="Finnish"
          value="finnish"
        />
        <Item
          key="french"
          label="French"
          value="french"
        />
        <Item
          key="galician"
          label="Galician"
          value="galician"
        />
        <Item
          key="german"
          label="German"
          value="german"
        />
        <Item
          key="greek"
          label="Greek"
          value="greek"
        />
        <Item
          key="hindi"
          label="Hindi"
          value="hindi"
        />
        <Item
          key="hungarian"
          label="Hungarian"
          value="hungarian"
        />
        <Item
          key="irish_gaelic"
          label="Irish Gaelic"
          value="irish_gaelic"
        />
        <Item
          key="italian"
          label="Italian"
          value="italian"
        />
        <Item
          key="japanese"
          label="Japanese"
          value="japanese"
        />
        <Item
          key="korean"
          label="Korean"
          value="korean"
        />
        <Item
          key="latvian"
          label="Latvian"
          value="latvian"
        />
        <Item
          key="lithuanian"
          label="Lithuanian"
          value="lithuanian"
        />
        <Item
          key="luxembourgish"
          label="Luxembourgish"
          value="luxembourgish"
        />
        <Item
          key="maltese"
          label="Maltese"
          value="maltese"
        />
        <Item
          key="polish"
          label="Polish"
          value="polish"
        />
        <Item
          key="portuguese"
          label="Portuguese"
          value="portuguese"
        />
        <Item
          key="romanian"
          label="Romanian"
          value="romanian"
        />
        <Item
          key="russian"
          label="Russian"
          value="russian"
        />
        <Item
          key="scottish_gaelic"
          label="Scottish Gaelic"
          value="scottish_gaelic"
        />
        <Item
          key="slovak"
          label="Slovak"
          value="slovak"
        />
        <Item
          key="slovenian"
          label="Slovenian"
          value="slovenian"
        />
        <Item
          key="spanish"
          label="Spanish"
          value="spanish"
        />
        <Item
          key="swedish"
          label="Swedish"
          value="swedish"
        />
        <Item
          key="turkish"
          label="Turkish"
          value="turkish"
        />
        <Item
          key="urdu"
          label="Urdu"
          value="urdu"
        />
        <Item
          key="welsh"
          label="Welsh"
          value="welsh"
        />
      </Styled(PickerNB)>
    </Styled(ViewNB)>
    <Styled(ViewNB)
      key="beginner"
      style={
        Object {
          "width": 375,
        }
      }
    >
      <Styled(PickerNB)
        iosIcon={
          <Styled(Icon)
            name="arrow-down"
          />
        }
        mode="dropdown"
        onValueChange={[Function]}
        selectedValue="beginner"
        testID="level-spanish"
      >
        <Item
          key="beginner"
          label="Beginner A1/A2"
          value="beginner"
        />
        <Item
          key="intermediate"
          label="Intermediate B1/B2"
          value="intermediate"
        />
        <Item
          key="fluent"
          label="Fluent C1/C2"
          value="fluent"
        />
      </Styled(PickerNB)>
    </Styled(ViewNB)>
  </Styled(ViewNB)>
  <Styled(Button)
    onPress={[Function]}
    primary={true}
    testID="addBtn"
    transparent={true}
  >
    <Styled(Icon)
      fontSize={30}
      name="plus-circle"
      type="FontAwesome"
    />
    <Styled(Text)>
      Add a langage
    </Styled(Text)>
  </Styled(Button)>
</Styled(ViewNB)>
`;

exports[`LangsToLearnSelector 2`] = `
<Styled(ViewNB)>
  <Styled(ViewNB)
    padder={true}
  >
    <Styled(Text)
      style={
        Object {
          "textDecorationLine": "underline",
        }
      }
    >
      Langage to learn
    </Styled(Text)>
  </Styled(ViewNB)>
  <Styled(ViewNB)
    key="english"
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Styled(ViewNB)
      key="english"
      style={
        Object {
          "width": 262.5,
        }
      }
    >
      <Styled(PickerNB)
        iosIcon={
          <Styled(Icon)
            name="arrow-down"
          />
        }
        mode="dropdown"
        onValueChange={[Function]}
        selectedValue="english"
        testID="lang-english"
      >
        <Item
          key="arabic"
          label="Arabic"
          value="arabic"
        />
        <Item
          key="basque"
          label="Basque"
          value="basque"
        />
        <Item
          key="bulgarian"
          label="Bulgarian"
          value="bulgarian"
        />
        <Item
          key="catalan"
          label="Catalan"
          value="catalan"
        />
        <Item
          key="chinese"
          label="Chinese"
          value="chinese"
        />
        <Item
          key="croatian"
          label="Croatian"
          value="croatian"
        />
        <Item
          key="czech"
          label="Czech"
          value="czech"
        />
        <Item
          key="danish"
          label="Danish"
          value="danish"
        />
        <Item
          key="dutch"
          label="Dutch"
          value="dutch"
        />
        <Item
          key="english"
          label="English"
          value="english"
        />
        <Item
          key="estonian"
          label="Estonian"
          value="estonian"
        />
        <Item
          key="finnish"
          label="Finnish"
          value="finnish"
        />
        <Item
          key="french"
          label="French"
          value="french"
        />
        <Item
          key="galician"
          label="Galician"
          value="galician"
        />
        <Item
          key="german"
          label="German"
          value="german"
        />
        <Item
          key="greek"
          label="Greek"
          value="greek"
        />
        <Item
          key="hindi"
          label="Hindi"
          value="hindi"
        />
        <Item
          key="hungarian"
          label="Hungarian"
          value="hungarian"
        />
        <Item
          key="irish_gaelic"
          label="Irish Gaelic"
          value="irish_gaelic"
        />
        <Item
          key="italian"
          label="Italian"
          value="italian"
        />
        <Item
          key="japanese"
          label="Japanese"
          value="japanese"
        />
        <Item
          key="korean"
          label="Korean"
          value="korean"
        />
        <Item
          key="latvian"
          label="Latvian"
          value="latvian"
        />
        <Item
          key="lithuanian"
          label="Lithuanian"
          value="lithuanian"
        />
        <Item
          key="luxembourgish"
          label="Luxembourgish"
          value="luxembourgish"
        />
        <Item
          key="maltese"
          label="Maltese"
          value="maltese"
        />
        <Item
          key="polish"
          label="Polish"
          value="polish"
        />
        <Item
          key="portuguese"
          label="Portuguese"
          value="portuguese"
        />
        <Item
          key="romanian"
          label="Romanian"
          value="romanian"
        />
        <Item
          key="russian"
          label="Russian"
          value="russian"
        />
        <Item
          key="scottish_gaelic"
          label="Scottish Gaelic"
          value="scottish_gaelic"
        />
        <Item
          key="slovak"
          label="Slovak"
          value="slovak"
        />
        <Item
          key="slovenian"
          label="Slovenian"
          value="slovenian"
        />
        <Item
          key="spanish"
          label="Spanish"
          value="spanish"
        />
        <Item
          key="swedish"
          label="Swedish"
          value="swedish"
        />
        <Item
          key="turkish"
          label="Turkish"
          value="turkish"
        />
        <Item
          key="urdu"
          label="Urdu"
          value="urdu"
        />
        <Item
          key="welsh"
          label="Welsh"
          value="welsh"
        />
      </Styled(PickerNB)>
    </Styled(ViewNB)>
    <Styled(ViewNB)
      key="beginner"
      style={
        Object {
          "width": 375,
        }
      }
    >
      <Styled(PickerNB)
        iosIcon={
          <Styled(Icon)
            name="arrow-down"
          />
        }
        mode="dropdown"
        onValueChange={[Function]}
        selectedValue="beginner"
        testID="level-english"
      >
        <Item
          key="beginner"
          label="Beginner A1/A2"
          value="beginner"
        />
        <Item
          key="intermediate"
          label="Intermediate B1/B2"
          value="intermediate"
        />
        <Item
          key="fluent"
          label="Fluent C1/C2"
          value="fluent"
        />
      </Styled(PickerNB)>
    </Styled(ViewNB)>
    <Styled(Button)
      onPress={[Function]}
      primary={true}
      testID="delete-english"
      transparent={true}
    >
      <Styled(Icon)
        fontSize={30}
        name="delete-forever"
        style={
          Object {
            "marginLeft": 0,
            "marginRight": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
          }
        }
        type="MaterialIcons"
      />
    </Styled(Button)>
  </Styled(ViewNB)>
  <Styled(ViewNB)
    key="spanish"
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Styled(ViewNB)
      key="spanish"
      style={
        Object {
          "width": 262.5,
        }
      }
    >
      <Styled(PickerNB)
        iosIcon={
          <Styled(Icon)
            name="arrow-down"
          />
        }
        mode="dropdown"
        onValueChange={[Function]}
        selectedValue="spanish"
        testID="lang-spanish"
      >
        <Item
          key="arabic"
          label="Arabic"
          value="arabic"
        />
        <Item
          key="basque"
          label="Basque"
          value="basque"
        />
        <Item
          key="bulgarian"
          label="Bulgarian"
          value="bulgarian"
        />
        <Item
          key="catalan"
          label="Catalan"
          value="catalan"
        />
        <Item
          key="chinese"
          label="Chinese"
          value="chinese"
        />
        <Item
          key="croatian"
          label="Croatian"
          value="croatian"
        />
        <Item
          key="czech"
          label="Czech"
          value="czech"
        />
        <Item
          key="danish"
          label="Danish"
          value="danish"
        />
        <Item
          key="dutch"
          label="Dutch"
          value="dutch"
        />
        <Item
          key="english"
          label="English"
          value="english"
        />
        <Item
          key="estonian"
          label="Estonian"
          value="estonian"
        />
        <Item
          key="finnish"
          label="Finnish"
          value="finnish"
        />
        <Item
          key="french"
          label="French"
          value="french"
        />
        <Item
          key="galician"
          label="Galician"
          value="galician"
        />
        <Item
          key="german"
          label="German"
          value="german"
        />
        <Item
          key="greek"
          label="Greek"
          value="greek"
        />
        <Item
          key="hindi"
          label="Hindi"
          value="hindi"
        />
        <Item
          key="hungarian"
          label="Hungarian"
          value="hungarian"
        />
        <Item
          key="irish_gaelic"
          label="Irish Gaelic"
          value="irish_gaelic"
        />
        <Item
          key="italian"
          label="Italian"
          value="italian"
        />
        <Item
          key="japanese"
          label="Japanese"
          value="japanese"
        />
        <Item
          key="korean"
          label="Korean"
          value="korean"
        />
        <Item
          key="latvian"
          label="Latvian"
          value="latvian"
        />
        <Item
          key="lithuanian"
          label="Lithuanian"
          value="lithuanian"
        />
        <Item
          key="luxembourgish"
          label="Luxembourgish"
          value="luxembourgish"
        />
        <Item
          key="maltese"
          label="Maltese"
          value="maltese"
        />
        <Item
          key="polish"
          label="Polish"
          value="polish"
        />
        <Item
          key="portuguese"
          label="Portuguese"
          value="portuguese"
        />
        <Item
          key="romanian"
          label="Romanian"
          value="romanian"
        />
        <Item
          key="russian"
          label="Russian"
          value="russian"
        />
        <Item
          key="scottish_gaelic"
          label="Scottish Gaelic"
          value="scottish_gaelic"
        />
        <Item
          key="slovak"
          label="Slovak"
          value="slovak"
        />
        <Item
          key="slovenian"
          label="Slovenian"
          value="slovenian"
        />
        <Item
          key="spanish"
          label="Spanish"
          value="spanish"
        />
        <Item
          key="swedish"
          label="Swedish"
          value="swedish"
        />
        <Item
          key="turkish"
          label="Turkish"
          value="turkish"
        />
        <Item
          key="urdu"
          label="Urdu"
          value="urdu"
        />
        <Item
          key="welsh"
          label="Welsh"
          value="welsh"
        />
      </Styled(PickerNB)>
    </Styled(ViewNB)>
    <Styled(ViewNB)
      key="beginner"
      style={
        Object {
          "width": 375,
        }
      }
    >
      <Styled(PickerNB)
        iosIcon={
          <Styled(Icon)
            name="arrow-down"
          />
        }
        mode="dropdown"
        onValueChange={[Function]}
        selectedValue="beginner"
        testID="level-spanish"
      >
        <Item
          key="beginner"
          label="Beginner A1/A2"
          value="beginner"
        />
        <Item
          key="intermediate"
          label="Intermediate B1/B2"
          value="intermediate"
        />
        <Item
          key="fluent"
          label="Fluent C1/C2"
          value="fluent"
        />
      </Styled(PickerNB)>
    </Styled(ViewNB)>
    <Styled(Button)
      onPress={[Function]}
      primary={true}
      testID="delete-spanish"
      transparent={true}
    >
      <Styled(Icon)
        fontSize={30}
        name="delete-forever"
        style={
          Object {
            "marginLeft": 0,
            "marginRight": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
          }
        }
        type="MaterialIcons"
      />
    </Styled(Button)>
  </Styled(ViewNB)>
  <Styled(ViewNB)
    key="italian"
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Styled(ViewNB)
      key="italian"
      style={
        Object {
          "width": 262.5,
        }
      }
    >
      <Styled(PickerNB)
        iosIcon={
          <Styled(Icon)
            name="arrow-down"
          />
        }
        mode="dropdown"
        onValueChange={[Function]}
        selectedValue="italian"
        testID="lang-italian"
      >
        <Item
          key="arabic"
          label="Arabic"
          value="arabic"
        />
        <Item
          key="basque"
          label="Basque"
          value="basque"
        />
        <Item
          key="bulgarian"
          label="Bulgarian"
          value="bulgarian"
        />
        <Item
          key="catalan"
          label="Catalan"
          value="catalan"
        />
        <Item
          key="chinese"
          label="Chinese"
          value="chinese"
        />
        <Item
          key="croatian"
          label="Croatian"
          value="croatian"
        />
        <Item
          key="czech"
          label="Czech"
          value="czech"
        />
        <Item
          key="danish"
          label="Danish"
          value="danish"
        />
        <Item
          key="dutch"
          label="Dutch"
          value="dutch"
        />
        <Item
          key="english"
          label="English"
          value="english"
        />
        <Item
          key="estonian"
          label="Estonian"
          value="estonian"
        />
        <Item
          key="finnish"
          label="Finnish"
          value="finnish"
        />
        <Item
          key="french"
          label="French"
          value="french"
        />
        <Item
          key="galician"
          label="Galician"
          value="galician"
        />
        <Item
          key="german"
          label="German"
          value="german"
        />
        <Item
          key="greek"
          label="Greek"
          value="greek"
        />
        <Item
          key="hindi"
          label="Hindi"
          value="hindi"
        />
        <Item
          key="hungarian"
          label="Hungarian"
          value="hungarian"
        />
        <Item
          key="irish_gaelic"
          label="Irish Gaelic"
          value="irish_gaelic"
        />
        <Item
          key="italian"
          label="Italian"
          value="italian"
        />
        <Item
          key="japanese"
          label="Japanese"
          value="japanese"
        />
        <Item
          key="korean"
          label="Korean"
          value="korean"
        />
        <Item
          key="latvian"
          label="Latvian"
          value="latvian"
        />
        <Item
          key="lithuanian"
          label="Lithuanian"
          value="lithuanian"
        />
        <Item
          key="luxembourgish"
          label="Luxembourgish"
          value="luxembourgish"
        />
        <Item
          key="maltese"
          label="Maltese"
          value="maltese"
        />
        <Item
          key="polish"
          label="Polish"
          value="polish"
        />
        <Item
          key="portuguese"
          label="Portuguese"
          value="portuguese"
        />
        <Item
          key="romanian"
          label="Romanian"
          value="romanian"
        />
        <Item
          key="russian"
          label="Russian"
          value="russian"
        />
        <Item
          key="scottish_gaelic"
          label="Scottish Gaelic"
          value="scottish_gaelic"
        />
        <Item
          key="slovak"
          label="Slovak"
          value="slovak"
        />
        <Item
          key="slovenian"
          label="Slovenian"
          value="slovenian"
        />
        <Item
          key="spanish"
          label="Spanish"
          value="spanish"
        />
        <Item
          key="swedish"
          label="Swedish"
          value="swedish"
        />
        <Item
          key="turkish"
          label="Turkish"
          value="turkish"
        />
        <Item
          key="urdu"
          label="Urdu"
          value="urdu"
        />
        <Item
          key="welsh"
          label="Welsh"
          value="welsh"
        />
      </Styled(PickerNB)>
    </Styled(ViewNB)>
    <Styled(ViewNB)
      key="beginner"
      style={
        Object {
          "width": 375,
        }
      }
    >
      <Styled(PickerNB)
        iosIcon={
          <Styled(Icon)
            name="arrow-down"
          />
        }
        mode="dropdown"
        onValueChange={[Function]}
        selectedValue="beginner"
        testID="level-italian"
      >
        <Item
          key="beginner"
          label="Beginner A1/A2"
          value="beginner"
        />
        <Item
          key="intermediate"
          label="Intermediate B1/B2"
          value="intermediate"
        />
        <Item
          key="fluent"
          label="Fluent C1/C2"
          value="fluent"
        />
      </Styled(PickerNB)>
    </Styled(ViewNB)>
    <Styled(Button)
      onPress={[Function]}
      primary={true}
      testID="delete-italian"
      transparent={true}
    >
      <Styled(Icon)
        fontSize={30}
        name="delete-forever"
        style={
          Object {
            "marginLeft": 0,
            "marginRight": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
          }
        }
        type="MaterialIcons"
      />
    </Styled(Button)>
  </Styled(ViewNB)>
</Styled(ViewNB)>
`;
